Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ single platform takes approximately 15-20 minutes on an Intel Core i5.</p>
 <a name="setting-up-on-windows" class="anchor" href="#setting-up-on-windows"><span class="octicon octicon-link"></span></a>Setting up on Windows</h2>
 
 <ul>
-<li>Install <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html">JDK8</a>. Create the <code>JAVA_HOME</code> env variable (for maven to work) and add to <code>Path</code> the <code>JAVA_HOME\bin</code> director</li>
+<li>Install <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html">JDK8</a>. Create the <code>JAVA_HOME</code> env variable (for maven to work) and add to <code>Path</code> the <code>JAVA_HOME\bin</code> directory</li>
 <li>Install <a href="http://gnuwin32.sourceforge.net/packages/make.htm">Gnu Make for Windows</a> and put the <code>bin</code> directory to <code>PATH</code>
 </li>
 <li>Extract <a href="http://maven.apache.org/download.cgi">Maven</a> and put the <code>bin</code> directory to <code>PATH</code>
