--- a/index.html
+++ b/index.html
@@ -1,47 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
     <title>Clash of the Lambdas by biboudis</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/biboudis/clashofthelambdas">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/biboudis/clashofthelambdas/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/biboudis/clashofthelambdas/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <header>
+      <div class="container">
+        <h1>Clash of the Lambdas</h1>
+        <h2>Microbenchmarking collections, via the functional APIs of Java 8, Scala, C#, F#.</h2>
 
-      <section>
-        <div id="title">
-          <h1>Clash of the Lambdas</h1>
-          <p>Microbenchmarking collections, via the functional APIs of Java 8, Scala, C#, F#.</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/biboudis">biboudis</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+        <section id="downloads">
+          <a href="https://github.com/biboudis/clashofthelambdas/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/biboudis/clashofthelambdas/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/biboudis/clashofthelambdas" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
+    <div class="container">
+      <section id="main_content">
         <h1>
 <a name="clash-of-the-lambdas" class="anchor" href="#clash-of-the-lambdas"><span class="octicon octicon-link"></span></a>Clash of the Lambdas</h1>
 
-<p>Microbenchmarking collection, functional APIs of Java 8, Scala, C#, F# on Windows and on Linux.</p>
+<p>Microbenchmarking collection, functional APIs of the VM multiparadigm languages
+Java 8, Scala, C#, F# on Windows and on Linux.</p>
+
+<p>The results are discussed in our ICOOOLPS'14 workshop paper: </p>
+
+<blockquote>
+<p><a href="http://www.di.uoa.gr/%7Ebiboudis/clashofthelambdas.pdf">http://www.di.uoa.gr/~biboudis/clashofthelambdas.pdf</a></p>
+</blockquote>
+
+<p>A snapshot of the benchmarks in zip-file: </p>
+
+<blockquote>
+<p><a href="http://www.di.uoa.gr/%7Ebiboudis/clashofthelambdas-icooolps14-benchmarks.zip">http://www.di.uoa.gr/~biboudis/clashofthelambdas-icooolps14-benchmarks.zip</a></p>
+</blockquote>
 
 <p>To run the benchmarking suite as is, you will need a system with approximately
 769mb of free space for heap allocation. Regarding execution time, a run on a
@@ -60,7 +63,7 @@ single platform takes approximately 15-20 minutes on an Intel Core i5.</p>
 <ul>
 <li>sequential</li>
 <li>parallel</li>
-<li>optimized sequential/parallel with <a href="http://scala-blitz.github.io/">Scala-Blitz</a>
+<li>optimized sequential/parallel with <a href="http://scala-blitz.github.io/">ScalaBlitz</a>
 </li>
 </ul>
 </li>
@@ -134,9 +137,8 @@ the script executable first).</li>
 <li>A small utility that was factored out as a seperate project.</li>
 </ol>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
   </body>
 </html>
