Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Clash of the Lambdas : Microbenchmarking collections, via the functional APIs of Java 8, Scala, C#, F#." />
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Clash of the Lambdas by biboudis</title>
+    <title>Clash of the Lambdas</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Clash of the Lambdas</h1>
-        <h2>Microbenchmarking collections, via the functional APIs of Java 8, Scala, C#, F#.</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/biboudis/clashofthelambdas">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/biboudis/clashofthelambdas/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/biboudis/clashofthelambdas/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/biboudis/clashofthelambdas" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Clash of the Lambdas</h1>
+          <h2 id="project_tagline">Microbenchmarking collections, via the functional APIs of Java 8, Scala, C#, F#.</h2>
 
-    <div class="container">
-      <section id="main_content">
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/biboudis/clashofthelambdas/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/biboudis/clashofthelambdas/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="clash-of-the-lambdas" class="anchor" href="#clash-of-the-lambdas"><span class="octicon octicon-link"></span></a>Clash of the Lambdas</h1>
 
@@ -131,7 +134,12 @@ results.{windows, linux}</code> (any filename).</li>
 separated values are benchmark, mean, mean error, sdev) by running
 <code>./process results.linux results.windows &gt; results.processed</code> (make
 the script executable first).</li>
-</ul><p><strong>Footnotes:</strong></p>
+</ul><h2>
+<a name="team" class="anchor" href="#team"><span class="octicon octicon-link"></span></a>Team</h2>
+
+<p><a href="https://twitter.com/biboudis">@biboudis</a>, <a href="https://twitter.com/NickPalladinos">@NickPalladinos</a> and <a href="http://cgi.di.uoa.gr/%7Esmaragd/">Y. Smaragdakis</a></p>
+
+<p><strong>Footnotes:</strong></p>
 
 <ol>
 <li>A small utility that was factored out as a seperate project.</li>
@@ -139,6 +147,15 @@ the script executable first).</li>
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Clash of the Lambdas maintained by <a href="https://github.com/biboudis">biboudis</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
