Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,13 +40,7 @@ Java 8, Scala, C#, F# on Windows and on Linux.</p>
 <p>The results are discussed in our ICOOOLPS'14 workshop paper: </p>
 
 <blockquote>
-<p><a href="http://www.di.uoa.gr/%7Ebiboudis/clashofthelambdas.pdf">http://www.di.uoa.gr/~biboudis/clashofthelambdas.pdf</a></p>
-</blockquote>
-
-<p>A snapshot of the benchmarks in zip-file: </p>
-
-<blockquote>
-<p><a href="http://www.di.uoa.gr/%7Ebiboudis/clashofthelambdas-icooolps14-benchmarks.zip">http://www.di.uoa.gr/~biboudis/clashofthelambdas-icooolps14-benchmarks.zip</a></p>
+<p><a href="http://arxiv.org/abs/1406.6631">http://arxiv.org/abs/1406.6631</a></p>
 </blockquote>
 
 <p>To run the benchmarking suite as is, you will need a system with approximately
