Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@ single platform takes approximately 30-40 minutes on an Intel Core i5.</p>
 <li>Follow the <a href="http://fsharp.org/use/linux/">instructions</a> on <a href="http://fsharp.org">fsharp.org</a>
 </li>
 </ul><h2>
-<a name="running-the-microbenchmarks-via-a-console-on-linux-o-via-a-powershell-console-on-windows" class="anchor" href="#running-the-microbenchmarks-via-a-console-on-linux-o-via-a-powershell-console-on-windows"><span class="octicon octicon-link"></span></a>Running the microbenchmarks via a console on Linux o via a Powershell console on Windows.</h2>
+<a name="running-the-microbenchmarks-" class="anchor" href="#running-the-microbenchmarks-"><span class="octicon octicon-link"></span></a>Running the microbenchmarks </h2>
+
+<p>(via a console on Linux o via a Powershell console on Windows)</p>
 
 <ul>
 <li>Compile all tests with <code>make</code>
