Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a name="clash-of-the-lambdas" class="anchor" href="#clash-of-the-lambdas"><span class="octicon octicon-link"></span></a>Clash of the Lambdas</h1>
 
-<p>Microbenchmarking collection, functional APIs of the VM multiparadigm languages
+<p>We are microbenchmarking functional collection APIs of the VM multiparadigm languages
 Java 8, Scala, C#, F# on Windows and on Linux.</p>
 
 <p>The results are discussed in our ICOOOLPS'14 workshop paper: </p>
@@ -44,7 +44,7 @@ Java 8, Scala, C#, F# on Windows and on Linux.</p>
 </blockquote>
 
 <p>To run the benchmarking suite as is, you will need a system with approximately
-769mb of free space for heap allocation. Regarding execution time, a run on a
+3GB of free space for heap allocation. Regarding execution time, a run on a
 single platform takes approximately 30-40 minutes on an Intel Core i5.</p>
 
 <ul>
@@ -139,7 +139,7 @@ the script executable first).</li>
 <p><strong>Footnotes:</strong></p>
 
 <ol>
-<li>A small utility that was factored out as a seperate project.</li>
+<li>A utility that was factored out as a seperate project.</li>
 </ol>
       </section>
     </div>
