Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Clash of the Lambdas by biboudis</title>
+    <meta name="description" content="Clash of the Lambdas : Microbenchmarking Stream APIs of Java 8, Scala, C#, F# and optimizing frameworks on Windows and Linux.">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Clash of the Lambdas</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Clash of the Lambdas</h1>
-        <p>Microbenchmarking Stream APIs of Java 8, Scala, C#, F# and optimizing frameworks on Windows and Linux.</p>
 
-        <p class="view"><a href="https://github.com/biboudis/clashofthelambdas">View the Project on GitHub <small>biboudis/clashofthelambdas</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/biboudis/clashofthelambdas">View on GitHub</a>
 
+          <h1 id="project_title">Clash of the Lambdas</h1>
+          <h2 id="project_tagline">Microbenchmarking Stream APIs of Java 8, Scala, C#, F# and optimizing frameworks on Windows and Linux.</h2>
 
-        <ul>
-          <li><a href="https://github.com/biboudis/clashofthelambdas/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/biboudis/clashofthelambdas/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/biboudis/clashofthelambdas">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/biboudis/clashofthelambdas/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/biboudis/clashofthelambdas/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="clash-of-the-lambdas" class="anchor" href="#clash-of-the-lambdas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Clash of the Lambdas</h1>
 
 <p>Microbenchmarking Stream APIs of the VM-based, multiparadigm languages:
-Java 8, Scala, C#, F# and optimizing frameworks, on Windows and on Linux.</p>
+Java 8, Scala, C#, F# on Windows and on Linux.</p>
 
 <p>The results are discussed in our ICOOOLPS'14 workshop paper: </p>
 
@@ -149,12 +152,17 @@ the script executable first).</li>
 <li>A utility that was factored out as a seperate project.</li>
 </ol>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/biboudis">biboudis</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Clash of the Lambdas maintained by <a href="https://github.com/biboudis">biboudis</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
